ci: init CI workflow

--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
+    "build:check": "tsc --noEmit && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "npx concurrently -n \"app,services\" -c \"#00FF00,#FFA500\" \"nest start --watch\" \"docker compose up\" -y",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\" --max-warnings=0 --format stylish",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
